# NextGenerationTranslatorBackend

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  HINTS.md  LICENSES.txt  NOTES.md  NOTICE.md  README.md  buildspec.yml  detector.py  docker-run.sh  initialize_cache.py  local.env  pyproject.toml  pytest.ini  requirements.txt  test.py  translator.py  translator_service.py  wsgi.py
resources/: test_texts.csv
src/main/: constants.py  detector.py  init_translation.py  request_limitation.py  schemas.py  settings.py  translator.py  translator_proxy_client.py  translator_service.py
src/main/translator_models/: __init__.py  mock_translator.py  nllb200_translator.py  opusmt_languages.py  opusmt_translator.py  translator_model.py  wmt19_translator.py
src/main/utils/: logger.py  timer.py  translation_graph.py
src/script/: docker-run.sh  start-local.sh  start-redis.sh  translate.sh
src/test/: pytest.ini  test_load.py  test_settings.py  test_translator_proxy.py  test_translator_service.py
src/test/integration/: conftest.py  test_translation_errors.py  test_translation_helper_methods.py  test_translation_steps.py
src/test/mocks/: translator_model_mocks.py
src/test/translator_models/: test_mock_translator.py  test_nllb200_translator.py  test_opusmt_translator.py  test_wmt19_translator.py
src/test/utils/: test_translation_graph.py
